# frugger

./: Cargo.toml  memory.x  run.ps1  rust-toolchain.toml
.cargo/: config.toml
brickbreaker/: Cargo.toml
brickbreaker/src/: lib.rs
frugger_core/: Cargo.toml
frugger_core/src/: frugger.rs  game.rs  lib.rs  onebit.rs  util.rs
frugger_display/: Cargo.toml
frugger_display/src/: lib.rs
frugger_onebit/: Cargo.toml
frugger_onebit/src/: hi_score.rs  lib.rs  menu.rs  ui.rs  util.rs
frugger_onebit/src/games/: input_test.rs  match_me.rs  mod.rs  racer.rs  runner.rs  triangle_jump.rs  worm.rs
frugger_rgb/: Cargo.toml
frugger_rgb/src/: lib.rs
frugger_sim/: Cargo.toml
frugger_sim/src/: lib.rs
src/: driver.rs  main.rs  mc_inputs.rs  mini_gb.rs  restarter.rs
