[package]
edition = "2021"
name = "rp2040-project-template"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
heapless = "0.8.0"
embedded-hal = "1.0.0"

# TODO update to 0.3.0 when it is released, remove portable-atomic
embedded-hal-bus = "0.2.0"
portable-atomic = { version = "1.6.0", features = ["critical-section"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

waveshare-rp2040-zero = "0.8.0"
mipidsi = "0.8.0"
ssd1306 = "0.8.4"
sh1106 = "0.5.0"
dummy-pin = "1.0.0"
display-interface-spi = "0.5.0"
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
fugit = "0.3.7"
numtoa = "0.2.4"
frugger_core = { path = "frugger_core" }
frugger_onebit = { path = "frugger_onebit" }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
usbd-hid = "0.7.0"
usbd-picotool-reset = "0.3.0"
ws2812-timer-delay = "0.3"
smart-leds = "0.3"
smart-leds-trait = "0.3"
# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 3
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
